# mailscout

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.py  test_auth.py
.github/workflows/: deploy.yml  greetings.yml  main.yml
data/emails/: filters.json
docs/: ci-cd-setup.md
src/api/: main.py
src/config/: __init__.py  email_filters.json.example
src/models/: email_data.py  email_filter.py
src/services/: email_storage.py  filter_service.py  gmail_service.py  webhook_service.py
src/storage/: __init__.py  factory.py  interface.py  json_storage.py  mongodb_storage.py
src/utils/: __init__.py  auth_setup.py
tests/: test_email_filter.py  test_email_storage.py  test_transaction_adapter.py  test_webhook_service.py
